fix overflow styles

--- a/components/CRTMonitor.module.scss
+++ b/components/CRTMonitor.module.scss
@@ -1,4 +1,4 @@
-@use '../styles/colors';
+@use "../styles/colors";
 
 @keyframes flicker {
     0% {
@@ -68,12 +68,12 @@
 
 @keyframes textShadow {
     0% {
-        text-shadow: 0.4389924193300864px 0 1px colors.$crt-text-shadow-primary, -0.4389924193300864px 0 1px colors.$crt-text-shadow-secondary,
-            0 0 3px;
+        text-shadow: 0.4389924193300864px 0 1px colors.$crt-text-shadow-primary,
+            -0.4389924193300864px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     5% {
-        text-shadow: 2.7928974010788217px 0 1px colors.$crt-text-shadow-primary, -2.7928974010788217px 0 1px colors.$crt-text-shadow-secondary,
-            0 0 3px;
+        text-shadow: 2.7928974010788217px 0 1px colors.$crt-text-shadow-primary,
+            -2.7928974010788217px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     10% {
         text-shadow: 0.02956275843481219px 0 1px colors.$crt-text-shadow-primary,
@@ -84,72 +84,72 @@
             -0.40218538552878136px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     20% {
-        text-shadow: 3.4794037899852017px 0 1px colors.$crt-text-shadow-primary, -3.4794037899852017px 0 1px colors.$crt-text-shadow-secondary,
-            0 0 3px;
+        text-shadow: 3.4794037899852017px 0 1px colors.$crt-text-shadow-primary,
+            -3.4794037899852017px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     25% {
-        text-shadow: 1.6125630401149584px 0 1px colors.$crt-text-shadow-primary, -1.6125630401149584px 0 1px colors.$crt-text-shadow-secondary,
-            0 0 3px;
+        text-shadow: 1.6125630401149584px 0 1px colors.$crt-text-shadow-primary,
+            -1.6125630401149584px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     30% {
-        text-shadow: 0.7015590085143956px 0 1px colors.$crt-text-shadow-primary, -0.7015590085143956px 0 1px colors.$crt-text-shadow-secondary,
-            0 0 3px;
+        text-shadow: 0.7015590085143956px 0 1px colors.$crt-text-shadow-primary,
+            -0.7015590085143956px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     35% {
-        text-shadow: 3.896914047650351px 0 1px colors.$crt-text-shadow-primary, -3.896914047650351px 0 1px colors.$crt-text-shadow-secondary,
-            0 0 3px;
+        text-shadow: 3.896914047650351px 0 1px colors.$crt-text-shadow-primary,
+            -3.896914047650351px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     40% {
-        text-shadow: 3.870905614848819px 0 1px colors.$crt-text-shadow-primary, -3.870905614848819px 0 1px colors.$crt-text-shadow-secondary,
-            0 0 3px;
+        text-shadow: 3.870905614848819px 0 1px colors.$crt-text-shadow-primary,
+            -3.870905614848819px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     45% {
-        text-shadow: 2.231056963361899px 0 1px colors.$crt-text-shadow-primary, -2.231056963361899px 0 1px colors.$crt-text-shadow-secondary,
-            0 0 3px;
+        text-shadow: 2.231056963361899px 0 1px colors.$crt-text-shadow-primary,
+            -2.231056963361899px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     50% {
         text-shadow: 0.08084290417898504px 0 1px colors.$crt-text-shadow-primary,
             -0.08084290417898504px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     55% {
-        text-shadow: 2.3758461067427543px 0 1px colors.$crt-text-shadow-primary, -2.3758461067427543px 0 1px colors.$crt-text-shadow-secondary,
-            0 0 3px;
+        text-shadow: 2.3758461067427543px 0 1px colors.$crt-text-shadow-primary,
+            -2.3758461067427543px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     60% {
-        text-shadow: 2.202193051050636px 0 1px colors.$crt-text-shadow-primary, -2.202193051050636px 0 1px colors.$crt-text-shadow-secondary,
-            0 0 3px;
+        text-shadow: 2.202193051050636px 0 1px colors.$crt-text-shadow-primary,
+            -2.202193051050636px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     65% {
-        text-shadow: 2.8638780614874975px 0 1px colors.$crt-text-shadow-primary, -2.8638780614874975px 0 1px colors.$crt-text-shadow-secondary,
-            0 0 3px;
+        text-shadow: 2.8638780614874975px 0 1px colors.$crt-text-shadow-primary,
+            -2.8638780614874975px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     70% {
         text-shadow: 0.48874025155497314px 0 1px colors.$crt-text-shadow-primary,
             -0.48874025155497314px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     75% {
-        text-shadow: 1.8948491305757957px 0 1px colors.$crt-text-shadow-primary, -1.8948491305757957px 0 1px colors.$crt-text-shadow-secondary,
-            0 0 3px;
+        text-shadow: 1.8948491305757957px 0 1px colors.$crt-text-shadow-primary,
+            -1.8948491305757957px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     80% {
-        text-shadow: 0.0833037308038857px 0 1px colors.$crt-text-shadow-primary, -0.0833037308038857px 0 1px colors.$crt-text-shadow-secondary,
-            0 0 3px;
+        text-shadow: 0.0833037308038857px 0 1px colors.$crt-text-shadow-primary,
+            -0.0833037308038857px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     85% {
         text-shadow: 0.09769827255241735px 0 1px colors.$crt-text-shadow-primary,
             -0.09769827255241735px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     90% {
-        text-shadow: 3.443339761481782px 0 1px colors.$crt-text-shadow-primary, -3.443339761481782px 0 1px colors.$crt-text-shadow-secondary,
-            0 0 3px;
+        text-shadow: 3.443339761481782px 0 1px colors.$crt-text-shadow-primary,
+            -3.443339761481782px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     95% {
-        text-shadow: 2.1841838852799786px 0 1px colors.$crt-text-shadow-primary, -2.1841838852799786px 0 1px colors.$crt-text-shadow-secondary,
-            0 0 3px;
+        text-shadow: 2.1841838852799786px 0 1px colors.$crt-text-shadow-primary,
+            -2.1841838852799786px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
     100% {
-        text-shadow: 2.6208764473832513px 0 1px colors.$crt-text-shadow-primary, -2.6208764473832513px 0 1px colors.$crt-text-shadow-secondary,
-            0 0 3px;
+        text-shadow: 2.6208764473832513px 0 1px colors.$crt-text-shadow-primary,
+            -2.6208764473832513px 0 1px colors.$crt-text-shadow-secondary, 0 0 3px;
     }
 }
 
@@ -214,7 +214,7 @@
             border-image-source: url(../images/bezel.png);
             border-image-slice: 30 fill;
             border-image-outset: 0;
-            overflow: auto;
+            overflow: hidden;
             height: 100%;
         }
         /* The screen itself + border */
@@ -229,6 +229,7 @@
             animation: on 2s linear;
             transition: all 0.5s;
             overflow: hidden;
+            height: 100%;
         }
 
         .crt:after {
@@ -278,6 +279,13 @@
             bottom: 100%;
             pointer-events: none;
             animation: scanline 10s linear infinite;
+        }
+
+        .crt > div {
+            height: 100%;
+            overflow: auto;
+            min-height: unset;
+            max-width: unset;
         }
     }
 }
